# ChMS

./: .gitignore  Makefile  PROJECT_SPEC.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/fixtures/: initial_data.json
backend/apps/accounts/migrations/: 0001_initial_user.py  0002_rbac.py  0003_user_last_login_branch.py  0004_notification_prefs.py
backend/apps/accounts/tests/: test_user_model.py
backend/apps/attendance/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/attendance/migrations/: 0001_initial_attendance.py  0002_visitors_children.py
backend/apps/branches/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/communications/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: audit.py  dashboard.py  exceptions.py  health.py  models.py  urls.py  views.py  viewsets.py
backend/apps/events/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/finance/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/groups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/members/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reports/: urls.py  views.py
backend/chms/: asgi.py  urls.py  wsgi.py
backend/chms/settings/: base.py  local.py  production.py
(+72 files in other folders)
